EntityFramework, Identity Entegrasyon ve Categories Controller eklendi

--- a/BlogProject/appsettings.json
+++ b/BlogProject/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlogConnection": "Server=.; Database=BlogProject; uid=sa; password=123" // sql authentication
+    //"BlogConnection":"Server=.; Database=BlogProject; Trusted_Connection=true"; Windows authentication
+  }
 }
