--- a/BlogProject/BlogProject.csproj
+++ b/BlogProject/BlogProject.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="..\..\..\10%2529Asp.Net Core MVC\BlogProject\BlogProject\wwwroot\UploadProfilePicture\" />
+    <Folder Include="wwwroot\UploadProfilePicture\" />
   </ItemGroup>
 
   <ItemGroup>
