--- a/BlogProject/BlogProject.csproj
+++ b/BlogProject/BlogProject.csproj
@@ -8,6 +8,8 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="..\..\..\10%2529Asp.Net Core MVC\BlogProject\BlogProject\wwwroot\UploadProfilePicture\" />
+    <Folder Include="wwwroot\Contents\" />
+    <Folder Include="wwwroot\lib\jquery-ajax-unobtrusive\" />
     <Folder Include="wwwroot\UploadProfilePicture\" />
   </ItemGroup>
 
@@ -21,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
